# air-hockey-rl

./: .gitignore  MUJOCO_LOG.TXT  README.md  airhockey.py  airhockey2d.py  airhockey_box2d.py  bc.py  create_rollout_figure.py  data.yaml  demonstrate.py  env.yml  get_trained_agent_trajs.py  iql.py  plot_all.py  ppo_profile  pyproject.toml  render.py  robo_paddle_pos.yaml  sb_eval.py  sb_trainer.py  setup.py  train_baselines.sh  train_domain_tasks.sh
airhockey/: __init__.py  airhockey.py  airhockey_base.py  airhockey_goal_tasks.py  airhockey_hierarchical_tasks.py  airhockey_simple_tasks.py  utils.py
baseline_configs/: gcrl_pos.yaml  move_block.yaml  multipuck_juggle.yaml  puck_height_1.yaml  puck_juggle.yaml  puck_reach.yaml  puck_vel.yaml  reach.yaml  reach_vel.yaml  strike.yaml  strike_crowd.yaml
configs/: default_train_puck_vel.yaml  demonstrate.yaml  real_demo.yaml  train_ppo.yaml
dataset_management/: clean_data.py  create_dataset.py  extract_puck_data.py  find_extraction_constants.ipynb  plot_trajectories.py  repair_data.py
offline_rl_algorithms/: iql.py
scripts/: baselines_train.sh  bc.py  create_rollout_figure.py  demonstrate.py  evaluate_model.py  gat_air_hockey.py  gat_debug.py  get_env_data.py  get_trained_agent_trajs.py  grounded_action_transformation.py  iql.py  kill_server_folder_jobs.sh  overhead_homography.py  play_trained_agent.py  plot_all.py  readNpy.py  run_job.sh  run_server_jobs_from_folder.sh  sync_pearl_cluster.sh  teleop.py  test_controller.py  test_task.py  train.py  train_domain_tasks.sh  train_original.py  utils.py  visualize_data.py
(+233 files in other folders)
